# semantic-alignment-core

./: .gitignore  README.md
.github/workflows/: ci.yml
semantic_match_registry/: Dockerfile  README.md  compose.yaml  pyproject.toml
semantic_match_registry/src/semantic_match_registry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
semantic_match_registry/src/smr/: algorithm.py  config.ini.default  service.py  visualization.py
semantic_match_registry/tests/: test_algorithm.py  test_service.py
semantic_match_registry/tests/test_resources/: example_graph.json
smr_alignment/: README.md  pyproject.toml
smr_alignment/src/smr_alignment/: metric_alignment.py  triangle_violation_checker.py
smr_alignment/tests/: test_metric_alignment.py  test_triangle_violation_checker.py
smr_discovery/: Dockerfile  README.md  compose.yaml  pyproject.toml
smr_discovery/src/smr_discovery/: endpoints.json.default  resolver.py  service.py
smr_discovery/tests/: test_resolver.py  test_service.py
smr_discovery/tests/test_resources/: endpoints.json
