[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_match_registry"
version = "1.0.0"
description = "A Semantic Match Registry implemented in Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sebastian Heppner", email = "mail@s-heppner.com" }]
dependencies = [
  "fastapi>=0.95.0",
  "pydantic>=1.10",
  "uvicorn>=0.21.1",
  "requests>=2.31.0",
  "networkx>=3.4.2",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pycodestyle",
  "coverage",
  "types-networkx",
  "types-requests",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["smr*"]

# include your default config in the wheel
[tool.setuptools.package-data]
"smr" = ["config.ini.default"]
